--- a/hawon/Seoul/Jongno_gu.html
+++ b/hawon/Seoul/Jongno_gu.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YOUvice Seoul | 서울시 휴식 & 건강 가이드북</title>
     <link rel="stylesheet" href="../../style.css">
@@ -12,9 +13,20 @@
     <link rel="stylesheet" href="../asset/leftmenu.css" />
     <link rel="stylesheet" href="../asset/layout.css" />
     <link rel="stylesheet" href="../asset/command.css" />
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="http://mattstow.com/experiment/responsive-image-maps/jquery.rwdImageMaps.min.js"></script>
+    <script>
+        $(function () {
+
+            $('img[usemap]').rwdImageMaps();
+            $("#img").width("100%");
+
+            //$('area').on('click', function () {
+            //    alert($(this).attr('alt') + ' clicked');
+        });
+    </script>
 </head>
 <body>
-
     <!--Header-->
     <section class="district-header">
         <nav>
@@ -33,7 +45,6 @@
         </nav>
         <h1>지역별 코스</h1>
     </section>
-
     <!--Content-->
     <section class="content_district">
         <div id="content" class="clearfix">
@@ -83,7 +94,6 @@
                 <h2>종로구</h2>
                 <!--map -->
                 <img class="gumap" src="../image/Jongno.png" style="max-width:100%; height:auto;" usemap="#image-map">
-
                 <map name="image-map">
                     <area target="" alt="백악구간" title="백악구간" href="./Hanyang/course_baegak.html" coords="167,439,171,462,284,441,333,466,367,492,391,504,441,499,479,498,477,514,485,532,511,538,524,520,508,500,499,472,469,466,411,470,376,466,367,447,338,440,309,418,278,404,243,437" shape="poly"
                           onmouseover="changePopupText('백악구간', '[한양도성길 종로구 4.70km 3시간 중급]', './Hanyang/course_baegak.html', 501, 350);" onmouseout="hidePopup();">
@@ -96,7 +106,6 @@
                     <area target="" alt="광장시장" title="광장시장" href="./Culture/GwangjangMarket.html" coords="480,706,23" shape="circle"
                           onmouseover="changePopupText('광장시장', '[주소 : 서울특별시 종로구 창경궁로 86]', './Culture/GwangjangMarket.html', 497, 695);" onmouseout="hidePopup();">
                 </map>
-
                 <div id="popup" style="background-color:white;position:absolute;opacity:0;border:1px solid black;border-bottom-width:5px;padding:5px 10px;"
                      onmouseover="showPopup();" onmouseout="hidePopup();">
                     <a id="popup_addr" href="#" style="text-decoration:none;color:black;" target="_self">
@@ -115,7 +124,6 @@
         <p>
             (서울특별시 성북구 동선동2가 169-1 성신여자대학교미디어정보관 (제3교학팀) 02-920-7175 정보시스템공학과
         </p>
-
         <div class="icons">
             <a class="fab fa-github" href="https://github.com/DSD-Korini/YOUvice_Seoul"></a>
             <a class="fab fa-instagram" href="https://www.instagram.com/sswu_ise.ai/"></a>
@@ -123,7 +131,6 @@
         </div>
         <p><i class="far fa-copyright"></i> DSD-Korini. All rights reserved</p>
     </section>
-
     <!--JavaScript for Toggle Menu-->
     <script>
         var navLinks = document.getElementById("navLinks");
@@ -134,19 +141,8 @@
             navLinks.style.right = "-200px";
         }
     </script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="http://mattstow.com/experiment/responsive-image-maps/jquery.rwdImageMaps.min.js"></script>
     <script>
-        $(function () {
-            $('img[usemap]').rwdImageMaps();
-            $('#popup').rwdlmageMaps();
-            $("#img").width("100%");
-
-            //$('area').on('click', function () {
-            //alert($(this).attr('alt') + ' clicked');
-        });
         //마우스오버 상자
-
         //절대 좌표
         var test = $('#gumain');
         var xx = test.offset().left;
@@ -177,9 +173,7 @@
         // 마우스오버 상자 보이기
         function showPopup() {
             document.getElementById('popup').style.opacity = 1;
-
         }
     </script>
-
 </body>
 </html>
