--- a/hawon/Seoul/Dongjak_gu.html
+++ b/hawon/Seoul/Dongjak_gu.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YOUvice Seoul | 서울시 휴식 & 건강 가이드북</title>
     <link rel="stylesheet" href="../../style.css">
@@ -12,9 +13,20 @@
     <link rel="stylesheet" href="../asset/leftmenu.css" />
     <link rel="stylesheet" href="../asset/layout.css" />
     <link rel="stylesheet" href="../asset/command.css" />
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="http://mattstow.com/experiment/responsive-image-maps/jquery.rwdImageMaps.min.js"></script>
+    <script>
+        $(function () {
+
+            $('img[usemap]').rwdImageMaps();
+            $("#img").width("100%");
+
+            //$('area').on('click', function () {
+            //    alert($(this).attr('alt') + ' clicked');
+        });
+    </script>
 </head>
 <body>
-
     <!--Header-->
     <section class="district-header">
         <nav>
@@ -33,7 +45,6 @@
         </nav>
         <h1>지역별 코스</h1>
     </section>
-
     <!--Content-->
     <section class="content_district">
         <div id="content" class="clearfix">
@@ -82,31 +93,24 @@
             <div class="main2" id="gumain">
                 <!--map -->
                 <h2>동작구</h2>
-                <img class="gumap" src="../image/Dongjak.png" style="max-width:100%; height:auto;" usemap="#image-map">
-                
-                
+                <img class="gumap" src="../image/Dongjak.png" style="max-width:100%; height:auto;" usemap="#image-map">                              
                 <map name="image-map">
                     <area target="" alt="노량진수산시장" title="노량진수산시장" href="./Culture/NoryangjinMarket.html" coords="398,81,404,126,447,124,444,81" shape="poly"
                           onmouseover="changePopupText('노량진수산시장', '[서울특별시 동작구 노량진동 노들로 674]', './Culture/NoryangjinMarket.html', 437 , 50);" onmouseout="hidePopup();">
                     <area target="" alt="서달산자락길" title="서달산자락길" href="./Mountain/Seodalsanjarak.html" coords="545,295,571,287,600,344,569,358" shape="poly"
                           onmouseover="changePopupText('서달산자락길', '[근교산자락길 동작구 0.5km 20분 초급]', './Mountain/Seodalsanjarak.html', 569 , 250);" onmouseout="hidePopup();">
                 </map>
-
-
-                    <div id="popup" style="background-color:white;position:absolute;opacity:0;border:1px solid black;border-bottom-width:5px;padding:5px 10px;"
-                         onmouseover="showPopup();" onmouseout="hidePopup();">
+                <div id="popup" style="background-color:white;position:absolute;opacity:0;border:1px solid black;border-bottom-width:5px;padding:5px 10px;"
+                     onmouseover="showPopup();" onmouseout="hidePopup();">
                         <a id="popup_addr" href="#" style="text-decoration:none;color:black;" target="_self">
                             <p id="popup_title" style="font-size:20px;font-weight:bold;line-height:15px;"></p>
                             <p id="popup_description" style="line-height:15px;"></p>
                             <p style="font-weight:bold;line-height:15px;">더보기</p>
                         </a>
-                    </div>
+                </div>
             </div>
-
         </div>
     </section>
-
-
     <hr width="100%" color="lightgray" size="1">
     <!--Footer-->
     <section class="footer">
@@ -114,7 +118,6 @@
         <p>
             (서울특별시 성북구 동선동2가 169-1 성신여자대학교미디어정보관 (제3교학팀) 02-920-7175 정보시스템공학과
         </p>
-
         <div class="icons">
             <a class="fab fa-github" href="https://github.com/DSD-Korini/YOUvice_Seoul"></a>
             <a class="fab fa-instagram" href="https://www.instagram.com/sswu_ise.ai/"></a>
@@ -122,7 +125,6 @@
         </div>
         <p><i class="far fa-copyright"></i> DSD-Korini. All rights reserved</p>
     </section>
-
     <!--JavaScript for Toggle Menu-->
     <script>
         var navLinks = document.getElementById("navLinks");
@@ -133,16 +135,7 @@
             navLinks.style.right = "-200px";
         }
     </script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="http://mattstow.com/experiment/responsive-image-maps/jquery.rwdImageMaps.min.js"></script>
     <script>
-        $(function () {
-            $('img[usemap]').rwdImageMaps();
-            $("#img").width("100%");
-
-            //$('area').on('click', function () {
-            //alert($(this).attr('alt') + ' clicked');
-        });
         //마우스오버 상자
 
         //절대 좌표
@@ -178,6 +171,5 @@
 
         }
     </script>
-
 </body>
 </html>
