--- a/hawon/Seoul/Gwanak_gu.html
+++ b/hawon/Seoul/Gwanak_gu.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YOUvice Seoul | 서울시 휴식 & 건강 가이드북</title>
     <link rel="stylesheet" href="../../style.css">
@@ -12,9 +13,20 @@
     <link rel="stylesheet" href="../asset/leftmenu.css" />
     <link rel="stylesheet" href="../asset/layout.css" />
     <link rel="stylesheet" href="../asset/command.css" />
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="http://mattstow.com/experiment/responsive-image-maps/jquery.rwdImageMaps.min.js"></script>
+    <script>
+        $(function () {
+
+            $('img[usemap]').rwdImageMaps();
+            $("#img").width("100%");
+
+            //$('area').on('click', function () {
+            //    alert($(this).attr('alt') + ' clicked');
+        });
+    </script>
 </head>
 <body>
-
     <!--Header-->
     <section class="district-header">
         <nav>
@@ -33,7 +45,6 @@
         </nav>
         <h1>지역별 코스</h1>
     </section>
-
     <!--Content-->
     <section class="content_district">
         <div id="content" class="clearfix">
@@ -83,7 +94,6 @@
                 <h2>관악구</h2>
                 <!--map -->
                 <img class="gumap" src="../image/Gwanak.png" style="max-width:100%; height:auto;" usemap="#image-map">
-
                 <map name="image-map">
                     <area target="" alt="도림천" title="도림천" href="./Hanriver/course_dorim.html" coords="208,71,70,125,70,147,211,102,318,218,304,234,334,276,394,272,422,309,442,296,407,254,340,245,343,215,302,169" shape="poly"
                            onmouseover="changePopupText('도림천길', '[한강/지천길 관악구,구로구,영등포구 10.56Km 3시간30분 초급]', './Hanriver/course_dorim.html', 420, 309);" onmouseout="hidePopup();">
@@ -92,7 +102,6 @@
                     <area target="" alt="관악산 자락길" title="관악산 자락길" href="./Mountain/Gwanakjarak.html" coords="400,466,439,437,481,488,422,533,406,511" shape="poly"
                            onmouseover="changePopupText('관악산 자락길', '[근교산자락길 관악구 1.3km 30분 초급]', './Mountain/Gwanakjarak.html', 480, 486);" onmouseout="hidePopup();">
                 </map>
-
                     <div id="popup" style="background-color:white;position:absolute;opacity:0;border:1px solid black;border-bottom-width:5px;padding:5px 10px;"
                          onmouseover="showPopup();" onmouseout="hidePopup();">
                         <a id="popup_addr" href="#" style="text-decoration:none;color:black;" target="_self">
@@ -102,11 +111,8 @@
                         </a>
                     </div>
             </div>
-
         </div>
     </section>
-
-
     <hr width="100%" color="lightgray" size="1">
     <!--Footer-->
     <section class="footer">
@@ -114,7 +120,6 @@
         <p>
             (서울특별시 성북구 동선동2가 169-1 성신여자대학교미디어정보관 (제3교학팀) 02-920-7175 정보시스템공학과
         </p>
-
         <div class="icons">
             <a class="fab fa-github" href="https://github.com/DSD-Korini/YOUvice_Seoul"></a>
             <a class="fab fa-instagram" href="https://www.instagram.com/sswu_ise.ai/"></a>
@@ -122,7 +127,6 @@
         </div>
         <p><i class="far fa-copyright"></i> DSD-Korini. All rights reserved</p>
     </section>
-
     <!--JavaScript for Toggle Menu-->
     <script>
         var navLinks = document.getElementById("navLinks");
@@ -133,16 +137,7 @@
             navLinks.style.right = "-200px";
         }
     </script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="http://mattstow.com/experiment/responsive-image-maps/jquery.rwdImageMaps.min.js"></script>
     <script>
-        $(function () {
-            $('img[usemap]').rwdImageMaps();
-            $("#img").width("100%");
-
-            //$('area').on('click', function () {
-            //alert($(this).attr('alt') + ' clicked');
-        });
         //마우스오버 상자
 
         //절대 좌표
@@ -178,7 +173,6 @@
 
         }
     </script>
-
 </body>
 </html>
 
