--- a/hawon/Seoul/Jung_gu.html
+++ b/hawon/Seoul/Jung_gu.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YOUvice Seoul | 서울시 휴식 & 건강 가이드북</title>
     <link rel="stylesheet" href="../../style.css">
@@ -12,9 +13,20 @@
     <link rel="stylesheet" href="../asset/leftmenu.css" />
     <link rel="stylesheet" href="../asset/layout.css" />
     <link rel="stylesheet" href="../asset/command.css" />
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="http://mattstow.com/experiment/responsive-image-maps/jquery.rwdImageMaps.min.js"></script>
+    <script>
+        $(function () {
+
+            $('img[usemap]').rwdImageMaps();
+            $("#img").width("100%");
+
+            //$('area').on('click', function () {
+            //    alert($(this).attr('alt') + ' clicked');
+        });
+    </script>
 </head>
 <body>
-
     <!--Header-->
     <section class="district-header">
         <nav>
@@ -33,7 +45,6 @@
         </nav>
         <h1>지역별 코스</h1>
     </section>
-
     <!--Content-->
     <section class="content_district">
         <div id="content" class="clearfix">
@@ -83,7 +94,6 @@
                 <h2>중구</h2>
                 <!--map -->
                 <img class="gumap" src="../image/Jung.png" style="max-width:100%; height:auto;" usemap="#image-map">
-
                 <map name="image-map">
                     <area target="" alt="정동길" title="정동길" href="./Culture/Jeongdong.html" coords="120,123,147,108,195,154,178,171" shape="poly"
                           onmouseover="changePopupText('정동길', '[서울특별시 중구 소공동]', './Culture/Jeongdong.html', 195, 150);" onmouseout="hidePopup();">
@@ -96,7 +106,6 @@
                     <area target="" alt="남산순환나들길" title="남산순환나들길" href="./EcoCulture/NamsanN.html" coords="462,383,440,347,442,318,457,298,421,315,392,320,358,306,319,318,250,304,228,335,219,306,243,278,311,290,345,268,390,279,429,287,469,276,476,344,483,386" shape="poly"
                           onmouseover="changePopupText('남산순환나들길', '[생태문화길 중구,중랑구 9.17km 3시간 중급]', './EcoCulture/NamsanN.html', 471, 200);" onmouseout="hidePopup();">
                 </map>
-
                 <div id="popup" style="background-color:white;position:absolute;opacity:0;border:1px solid black;border-bottom-width:5px;padding:5px 10px;"
                      onmouseover="showPopup();" onmouseout="hidePopup();">
                     <a id="popup_addr" href="#" style="text-decoration:none;color:black;" target="_self">
@@ -108,8 +117,6 @@
             </div>
         </div>
     </section>
-
-
     <hr width="100%" color="lightgray" size="1">
     <!--Footer-->
     <section class="footer">
@@ -117,7 +124,6 @@
         <p>
             (서울특별시 성북구 동선동2가 169-1 성신여자대학교미디어정보관 (제3교학팀) 02-920-7175 정보시스템공학과
         </p>
-
         <div class="icons">
             <a class="fab fa-github" href="https://github.com/DSD-Korini/YOUvice_Seoul"></a>
             <a class="fab fa-instagram" href="https://www.instagram.com/sswu_ise.ai/"></a>
@@ -125,7 +131,6 @@
         </div>
         <p><i class="far fa-copyright"></i> DSD-Korini. All rights reserved</p>
     </section>
-
     <!--JavaScript for Toggle Menu-->
     <script>
         var navLinks = document.getElementById("navLinks");
@@ -136,16 +141,7 @@
             navLinks.style.right = "-200px";
         }
     </script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="http://mattstow.com/experiment/responsive-image-maps/jquery.rwdImageMaps.min.js"></script>
     <script>
-        $(function () {
-            $('img[usemap]').rwdImageMaps();
-            $("#img").width("100%");
-
-            //$('area').on('click', function () {
-            //alert($(this).attr('alt') + ' clicked');
-        });
         //마우스오버 상자
 
         //절대 좌표
@@ -181,6 +177,5 @@
 
         }
     </script>
-
 </body>
 </html>
