--- a/hawon/Seoul/Seodaemun_gu.html
+++ b/hawon/Seoul/Seodaemun_gu.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YOUvice Seoul | 서울시 휴식 & 건강 가이드북</title>
     <link rel="stylesheet" href="../../style.css">
@@ -12,9 +13,20 @@
     <link rel="stylesheet" href="../asset/leftmenu.css" />
     <link rel="stylesheet" href="../asset/layout.css" />
     <link rel="stylesheet" href="../asset/command.css" />
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="http://mattstow.com/experiment/responsive-image-maps/jquery.rwdImageMaps.min.js"></script>
+    <script>
+        $(function () {
+
+            $('img[usemap]').rwdImageMaps();
+            $("#img").width("100%");
+
+            //$('area').on('click', function () {
+            //    alert($(this).attr('alt') + ' clicked');
+        });
+    </script>
 </head>
 <body>
-
     <!--Header-->
     <section class="district-header">
         <nav>
@@ -33,7 +45,6 @@
         </nav>
         <h1>지역별 코스</h1>
     </section>
-
     <!--Content-->
     <section class="content_district">
         <div id="content" class="clearfix">
@@ -83,7 +94,6 @@
                 <h2>서대문구</h2>
                 <!--map -->
                 <img class="gumap" src="../image/Seodaemun.png" style="max-width:100%; height:auto;" usemap="#image-map">
-
                 <map name="image-map">
                     <area target="" alt="백련산 나들길" title="백련산 나들길" href="./EcoCulture/course_baekryeon.html" coords="403,290,417,274,364,192,324,196,276,254,300,344,286,363,328,428,364,412,355,392,336,398,328,366,293,268,346,209" shape="poly"
                           onmouseover="changePopupText('백련산 나들길', '[생태문화길 서대문구 5.09km 3시간 중급]', './EcoCulture/course_baekryeon.html', 365 , 192);" onmouseout="hidePopup();">
@@ -92,7 +102,6 @@
                     <area target="" alt="안산자락길" title="안산자락길" href="./Mountain/ansanjarak.html" coords="401,432,381,425,395,407,411,378,430,376,491,373,504,426,529,438,529,464,545,494,550,526,566,545,539,548,495,541,454,494,464,473,441,472,390,444,374,426,358,432,360,415,375,411,403,442,436,460,470,456,486,475,481,493,503,531,537,531,537,508,522,482,513,457,500,435,479,402,476,385,448,386,425,386" shape="poly"
                           onmouseover="changePopupText('안산자락길', '[근교산자락길 서대문구 7km 2시간 초급]', './Mountain/ansanjarak.html', 565, 545);" onmouseout="hidePopup();">
                 </map>
-
                 <div id="popup" style="background-color:white;position:absolute;opacity:0;border:1px solid black;border-bottom-width:5px;padding:5px 10px;"
                      onmouseover="showPopup();" onmouseout="hidePopup();">
                     <a id="popup_addr" href="#" style="text-decoration:none;color:black;" target="_self">
@@ -102,11 +111,8 @@
                     </a>
                 </div>
             </div>
-
         </div>
     </section>
-
-
     <hr width="100%" color="lightgray" size="1">
     <!--Footer-->
     <section class="footer">
@@ -114,7 +120,6 @@
         <p>
             (서울특별시 성북구 동선동2가 169-1 성신여자대학교미디어정보관 (제3교학팀) 02-920-7175 정보시스템공학과
         </p>
-
         <div class="icons">
             <a class="fab fa-github" href="https://github.com/DSD-Korini/YOUvice_Seoul"></a>
             <a class="fab fa-instagram" href="https://www.instagram.com/sswu_ise.ai/"></a>
@@ -122,7 +127,6 @@
         </div>
         <p><i class="far fa-copyright"></i> DSD-Korini. All rights reserved</p>
     </section>
-
     <!--JavaScript for Toggle Menu-->
     <script>
         var navLinks = document.getElementById("navLinks");
@@ -133,16 +137,7 @@
             navLinks.style.right = "-200px";
         }
     </script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="http://mattstow.com/experiment/responsive-image-maps/jquery.rwdImageMaps.min.js"></script>
     <script>
-        $(function () {
-            $('img[usemap]').rwdImageMaps();
-            $("#img").width("100%");
-
-            //$('area').on('click', function () {
-            //alert($(this).attr('alt') + ' clicked');
-        });
         //마우스오버 상자
 
         //절대 좌표
