--- a/hawon/Seoul/EcoCulture/Acha.html
+++ b/hawon/Seoul/EcoCulture/Acha.html
@@ -114,7 +114,7 @@
                             <div class="list_start">
                                 <div class="list_detail">
                                     <figure class="snip1200">
-                                        <img src="../../image/아차산성.jpg" alt="sq-sample27" />
+                                        <img src="../../image/아차산성.JPG" alt="sq-sample27" />
                                         <figcaption>
                                             <p>
                                                 아차산성
