--- a/hawon/Seoul/Hanriver/course_ui.html
+++ b/hawon/Seoul/Hanriver/course_ui.html
@@ -132,7 +132,7 @@
 
                                 <div class="list_detail">
                                     <figure class="snip1200">
-                                        <img src="../img/북서울.jpg" alt="sq-sample27" />
+                                        <img src="../img/북서울.JPG" alt="sq-sample27" />
                                         <figcaption>
                                             <p>
 
