--- a/yejin/2_hanRiver/course_dorim.html
+++ b/yejin/2_hanRiver/course_dorim.html
@@ -108,7 +108,7 @@
      <!-- 리스트 -->
      <div class="list_start">
          <div class="list_detail"> <figure class="snip1200">
-            <img src="../img/보라매.jpg" alt="sq-sample27" />
+            <img src="../img/보라매.JPG" alt="sq-sample27" />
             <figcaption>
               <p>
                 이용시간 : 보라매공원 정문주차장 09:00~ 22:00
