--- a/yejin/5_culture/course_acha.html
+++ b/yejin/5_culture/course_acha.html
@@ -106,7 +106,7 @@
                             <div class="list_start">
                                 <div class="list_detail">
                                     <figure class="snip1200">
-                                        <img src="../img/아차산성.jpg" alt="sq-sample27" />
+                                        <img src="../img/아차산성.JPG" alt="sq-sample27" />
                                         <figcaption>
                                             <p>
                                                 사적 제234호로 지정되어있으며, 면적 10만3375㎡이다. 아차산에 위치한 이 산성은 아단성, 장한성, 광장성이라고도 불리며, 누가 축조했는지의 여부는 확실치 않다. 삼국시대 한강 일대를 뺏기 위해 벌어진 치열한 전투의 승패에 따라 이 성의 주인이 백제에서 고구려, 신라 순으로 바뀌었다. 산성의 형식은 산봉우리를 둘러서 쌓는 테뫼식에 속하지만, 규모가 매우 크고 성안에 작은 계곡도 있어 장기전에 적합한 포곡식으로도 볼 수 있다.
