--- a/hawon/Seoul/Hanriver/course_dorim.html
+++ b/hawon/Seoul/Hanriver/course_dorim.html
@@ -123,7 +123,7 @@
                             <div class="list_start">
                                 <div class="list_detail">
                                     <figure class="snip1200">
-                                        <img src="../img/보라매.jpg" alt="sq-sample27" />
+                                        <img src="../img/보라매.JPG" alt="sq-sample27" />
                                         <figcaption>
                                             <p>
                                                 이용시간 : 보라매공원 정문주차장 09:00~ 22:00
