--- a/hawon/Seoul/Hanyang/course_inwang.html
+++ b/hawon/Seoul/Hanyang/course_inwang.html
@@ -151,10 +151,9 @@
                                 </div>
                                 <div class="list_detail">
                                     <figure class="snip1200">
-                                        <img src="../img/경희궁.jpg" alt="sq-sample27" />
+                                        <img src="../img/경희궁.JPG" alt="sq-sample27" />
                                         <figcaption>
                                             <p>
-
                                                 이용시간 :  매일 09:00 ~ 18:00
                                                 <br>
                                                 휴무일 : 매주 월요일, 1월 1일
