--- a/yejin/2_hanRiver/course_ui.html
+++ b/yejin/2_hanRiver/course_ui.html
@@ -115,7 +115,7 @@
         
 
           <div class="list_detail"> <figure class="snip1200">
-            <img src="../img/북서울.jpg" alt="sq-sample27" />
+            <img src="../img/북서울.JPG" alt="sq-sample27" />
             <figcaption>
               <p>
               
