--- a/yejin/3_hanyang/course_inwang.html
+++ b/yejin/3_hanyang/course_inwang.html
@@ -122,7 +122,7 @@
             
           </figure></div>
          <div class="list_detail"> <figure class="snip1200">
-            <img src="../img/경희궁.jpg" alt="sq-sample27" />
+            <img src="../img/경희궁.JPG" alt="sq-sample27" />
             <figcaption>
               <p>
             
