--- a/page_district.html
+++ b/page_district.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="./hawon/asset/leftmenu.css" />
     <link rel="stylesheet" href="./hawon//asset/layout.css" />
     <link rel="stylesheet" href="./hawon/asset/command.css" />
-
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 </head>
 <body>
@@ -71,8 +70,8 @@
                             <a href="./hawon/Seoul/Yeongdeungpo_gu.html">영등포구</a>
                             <a href="./hawon/Seoul/Dongjak_gu.html">동작구</a>
                             <a href="./hawon/Seoul/Gwanak_gu.html">관악구</a>
-                            <a href="./haown/Seoul/Seocho_gu.html">서초구</a>
-                            <a href="./hawon//Seoul/Gangnam_gu.html">강남구</a>
+                            <a href="./hawon/Seoul/Seocho_gu.html">서초구</a>
+                            <a href="./hawon/Seoul/Gangnam_gu.html">강남구</a>
                             <a href="./hawon/Seoul/Songpa_gu.html">송파구</a>
                             <a href="./hawon/Seoul/Gangdong_gu.html">강동구</a>
                         </div>
