--- a/hawon/Seoul/Hanriver/course_songpagang.html
+++ b/hawon/Seoul/Hanriver/course_songpagang.html
@@ -65,7 +65,7 @@
                             <li><a href="../Nowon_gu.html">노원구</a></li>
                             <li><a href="../Jungnang_gu.html">중랑구</a></li>
                             <li><a href="../Gwangjin_gu.html">광진구</a></li>
-                            <li><a href="../Jongno_gu">종로구</a></li>
+                            <li><a href="../Jongno_gu.html">종로구</a></li>
                             <li><a href="../Yongsan_gu.html">용산구</a></li>
                             <li><a href="../Dobong_gu.html">도봉구</a></li>
                             <li><a href="../Gangbuk_gu.html">강북구</a></li>
